--- a/FuelLogger/FuelLogger/packages.config
+++ b/FuelLogger/FuelLogger/packages.config
@@ -3,5 +3,6 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmLight" version="5.2.0.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLite.Net-PCL" version="3.0.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
